src/styles/custom.css
/* ... */
/* Dark mode colors. */
:root {
  --sl-color-accent-low: #072d00;
  --sl-color-accent: #247f00;
  --sl-color-accent-high: #aad7a0;
  --sl-color-white: #ffffff;
  --sl-color-gray-1: #eaf0e8;
  --sl-color-gray-2: #bdc4bb;
  --sl-color-gray-3: #82907f;
  --sl-color-gray-4: #4f5c4d;
  --sl-color-gray-5: #303c2d;
  --sl-color-gray-6: #1f2a1c;
  --sl-color-black: #151a13;
}
/* Light mode colors. */
:root[data-theme="light"] {
  --sl-color-accent-low: #c0e2b8;
  --sl-color-accent: #258100;
  --sl-color-accent-high: #0d3e00;
  --sl-color-white: #151a13;
  --sl-color-gray-1: #1f2a1c;
  --sl-color-gray-2: #303c2d;
  --sl-color-gray-3: #4f5c4d;
  --sl-color-gray-4: #82907f;
  --sl-color-gray-5: #bdc4bb;
  --sl-color-gray-6: #eaf0e8;
  --sl-color-gray-7: #f4f7f3;
  --sl-color-black: #ffffff;
}

.tagline {
  font-family: "antique-olive", sans-serif;
}



[data-has-hero] .page {
  /* simple, light dots repeating */
  --dot-bg: white;
  --dot-color: rgba(212, 212, 212, 0.449);
  --dot-size: 1.5px;
  --dot-space: 12px;

  background: linear-gradient(215deg, #b3c4b6, transparent 20%),
    linear-gradient(125deg, #b3c4b6, transparent 20%),
    linear-gradient(15deg, #b3c4b6, transparent 20%),
    /* radial-gradient(#b3c4b6, transparent 40%) no-repeat -60vw -40vh / 105vw
      200vh,
    radial-gradient(#b3c4b6, transparent 65%) no-repeat 50% calc(100% + 20rem) /
      60rem 30rem */
      linear-gradient(
        90deg,
        var(--dot-bg) calc(var(--dot-space) - var(--dot-size)),
        transparent 1%
      )
      center / var(--dot-space) var(--dot-space),
    linear-gradient(
        var(--dot-bg) calc(var(--dot-space) - var(--dot-size)),
        transparent 1%
      )
      center / var(--dot-space) var(--dot-space),
    var(--dot-color);
}
[data-has-hero][data-theme="dark"] .page {
  /* simple, light dots repeating */
  --dot-bg: black;
  --dot-color: rgba(212, 212, 212, 0.449);
  --dot-size: 1.5px;
  --dot-space: 12px;
  img {
    filter: invert(1);
    opacity: 0.9;
  }
  background: linear-gradient(215deg, #000000, transparent 20%),
    linear-gradient(125deg, #000000, transparent 20%),
    linear-gradient(15deg, #000000, transparent 20%),
    /* radial-gradient(#b3c4b6, transparent 40%) no-repeat -60vw -40vh / 105vw
      200vh,
    radial-gradient(#b3c4b6, transparent 65%) no-repeat 50% calc(100% + 20rem) /
      60rem 30rem */
      linear-gradient(
        90deg,
        var(--dot-bg) calc(var(--dot-space) - var(--dot-size)),
        transparent 1%
      )
      center / var(--dot-space) var(--dot-space),
    linear-gradient(
        var(--dot-bg) calc(var(--dot-space) - var(--dot-size)),
        transparent 1%
      )
      center / var(--dot-space) var(--dot-space),
    var(--dot-color);
}

[data-has-hero] header {
  border-bottom: 1px solid transparent;
  background-color: transparent;
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
}

@font-face {
  font-family: "FontAwesomeBrands";
  src: url("/src/fonts/fa-brands-400.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

.home-card {
  border-radius: 20%;
  border: 1px dotted black;
}

html[data-theme="dark"] a.multitool:after {
  border: 1px solid black;
}

a.pi:after {
  font-family: "FontAwesomeBrands";
  content: "\f7bb";
  float: right;
  border-radius: 5px;
  border: 1px solid white;
  padding: 0px 5px 0px 5px;
}

html[data-theme="dark"] a.apple:after {
  border: 1px solid black;
}

a.apple:after {
  font-family: "FontAwesomeBrands";
  content: "\f179";
  float: right;
  border-radius: 5px;
  border: 1px solid white;
  padding: 0px 5px 0px 5px;
}

html[data-theme="dark"] a.windows:after {
  border: 1px solid black;
}

a.windows:after {
  font-family: "FontAwesomeBrands";
  content: "\f17a";
  float: right;
  border-radius: 5px;
  border: 1px solid white;
  padding: 0px 5px 0px 5px;
}

html[data-theme="dark"] a.linux:after {
  border: 1px solid black;
}

a.linux:after {
  font-family: "FontAwesomeBrands";
  content: "\f17c";
  float: right;
  border-radius: 5px;
  border: 1px solid white;
  padding: 0px 5px 0px 5px;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* ------------------------------------------- */
/* START: OVERRIDE DEFAULT STYLES              */
/* - Delete this section to restore defaults   */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* END:   OVERRIDE DEFAULT STYLES              */
/* ------------------------------------------- */

/* ------------------------------------------- */
/* START: CUSTOM STYLES                        */
/* - Don't delete this section                 */
/* ------------------------------------------- */
/* --- START: Footnotes ------*/
.main-pane hr.footnote {
  border: 1px solid lightgrey;
  border-radius: 5px;
  margin-top: 10px;
  width: 50%;
}

.main-pane div.footnote {
  font-size: 0.8em;
  margin-top: 4px;
}
/* --- END: Footnotes ------*/

/* --- START: Figure, Table and Listing captions ------*/
.main-pane div.caption {
  text-align: center;
  margin-top: 5px;
}

.main-pane div.caption span.caption-figure-nbr {
  font-weight: 800;
}
/* --- END:   Figure, Table and Listing captions ------*/

/* --- START: Review changes: Delete style contents once done reviewing ------*/
.review {
  color: firebrick;
}
/* --- END:   Review changes: Delete style contents once done reviewing ------*/

/* --- START: Syntax Box ------*/
aside[aria-label="Syntax"] {
  border-inline-start: inherit;
  border-radius: 8px;
  border: 2px solid #2177c3;
}

html[data-theme="light"] aside[aria-label="Syntax"] {
  background-color: #dfeaef;
}

html[data-theme="dark"] aside[aria-label="Syntax"] {
  background-color: #3d414d;
}

aside[aria-label="Syntax"] img {
  background-color: white;
  border-radius: 8px;
}
/* ... */

